fix ports | docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,10 @@ services:
     ports:
       - 8081:8081
       - 8080:8080
+      # - первый внешний ip:80:8081
+      # - второй внешний ip:80:8080
+      # - первый внешний ip:443:8082
+      # - второй внешний ip:443:8083
     networks:
       - virtual-network
     depends_on:
